[metadata]
name = prism-ds
description = The easiest way to create data pipelines in Python.
long_description_content_type = text/markdown
long_description = file: README.md
version = 0.3.0
author = prism founders
author_email = hello@runprism.com
license = Apache-2.0
license_files = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    homepage = https://www.runprism.com
    documentation = https://docs.runprism.com
    repository = https://github.com/runprism/prism

[options]
packages=find_namespace:
include_package_data=True
install_requires =
    astor>=0.7
    boto3>=1
    botocore>=1
    click>=8
    networkx>=2
    numpy>=1
    pandas>=1
    PyYAML>=6
    requests>=2
    Jinja2==3.1.2
    MarkupSafe>=2.0
    coolname>=2.2
    shortuuid>=1.0
    rich_click>=1.6.1
    Pillow>=9.5.0
    sqlalchemy>=2.0.27
    watchdog>=4.0.0
python_requires = >=3.7
zip_safe = no

[options.extras_require]
snowflake =
    snowflake-connector-python>=2
    pyarrow<10.1.0,>=10.0.1
bigquery =
    google-api-python-client>=2
    google-auth>=2
    google-cloud-bigquery>=2
    db-dtypes>=1
redshift =
    psycopg2-binary>=2.9
postgres =
    psycopg2-binary>=2.9
trino =
    trino>=0.319
presto =
    presto-python-client>=0.8
pyspark =
    pyspark>=3
dev =
    dbt-snowflake>=1,<=1.7.5
    pytest>=7
    fastparquet>=0.8,<1
    tox>=3.24
    mypy>=1.9.0
    tomli>=2.0.1
    typed-ast>=1.5.5
    types-PyYAML>=6.0.12.20240311
    ruff>=0.3.3
    types-networkx>=3.2.1.20240313
    black>=24.3.0
    pre-commit>=3.5.0


[options.entry_points]
console_scripts =
    prism = prism.main:cli
